--- a/pages/content1-page/content1.css
+++ b/pages/content1-page/content1.css
@@ -6,10 +6,11 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 img{
-    width: 632px;
-    height: 558.29px;
+    width: 500px;
+    height: 446px;
     top: -151px;
     left: -1671px;
     gap: 0px;
@@ -39,9 +40,9 @@ p{
     left: -1427px;
     gap: 0px;
     opacity: 0px;
-    border-radius: 80%;
-    width: 40px;
-    height: 30px;
+    border-radius: 40%;
+    width: 45px;
+    height: 20px;
     border-style: none;
 
 }
@@ -74,5 +75,12 @@ p{
     opacity: 0px;
     border-radius: 50px;
     border-style: none;
+    cursor: pointer;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
     
 }
+#buttonMain-content1:hover{
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+    
+
