--- a/pages/content3-page/content3.css
+++ b/pages/content3-page/content3.css
@@ -4,6 +4,7 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
 #seta-content3{
     margin-right: 1000px;
@@ -13,6 +14,7 @@ body{
     left: -2122px;
     gap: 0px;
     opacity: 0px;
+    filter:invert(100%) saturate(0%);
   
 }
    
@@ -80,5 +82,10 @@ p{
     opacity: 0px;
     border-radius: 50px;
     border-style: none;
+    cursor: pointer;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
     
+}
+#buttonMain-content3:hover{
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
