--- a/pages/logIn-page/log.css
+++ b/pages/logIn-page/log.css
@@ -6,6 +6,10 @@ body{
     align-items: center;
     margin-top: 20px;
 }
+h1{
+    font-family:"Inter",sans-serif;
+    font-weight: 300;
+}
 .seta-imagem-LogIn{
     margin-right: 1000px;
     width: 39px;
@@ -36,11 +40,15 @@ body{
 #button1-LogIn:active, #button2-LogIn:active, #button3-LogIn:active {
     background-color:#D9D9D9; 
 }
+a{
+    text-decoration: none;
+    color:#000000;
+}
 
 p{ 
     font-family:"Inter",sans-serif;
     font-size: 19px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 22.99px;
     text-align: center;
     color: #000000;
