--- a/pages/content3-page/content3.css
+++ b/pages/content3-page/content3.css
@@ -15,7 +15,11 @@ body{
     gap: 0px;
     opacity: 0px;
     filter:invert(100%) saturate(0%);
-  
+    transition: filter 0.3s ease;
+}
+#seta-content3:hover {
+    filter: invert(100%) sepia(50%) hue-rotate(200deg) saturate(400%);
+    opacity: 1; 
 }
    
 img #img1-content3{
