fix:erro do commit anterior solucionado

--- a/pages/form-page/form.css
+++ b/pages/form-page/form.css
@@ -65,6 +65,9 @@ h1{
     padding: 20px;
     margin:20px;
 }
+.button-forms{
+   margin-left: 40px;
+}
 #button1-forms{
     margin-top: 20px;
     margin-left:20px;
