--- a/pages/form-page/form.css
+++ b/pages/form-page/form.css
@@ -42,7 +42,7 @@ img{
     margin:10px;
     padding: 30px;
 }
-#nome,#email,#pass,#pass1{
+#nome,#email,#senha,#senha1{
     font-family:"Inter",sans-serif;
     font-size: 20px;
     background-color:#FFFFFF;
@@ -67,6 +67,7 @@ h1{
 }
 .button-forms{
    margin-left: 40px;
+   margin-bottom: 20px;
 }
 #button1-forms{
     margin-top: 20px;
