--- a/pages/home-page/home.css
+++ b/pages/home-page/home.css
@@ -35,3 +35,9 @@ h2{
     font-weight: 300;
     margin-left: 20px;
 }
+
+#dadosSucesso{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
