--- a/pages/content1-page/content1.css
+++ b/pages/content1-page/content1.css
@@ -17,6 +17,26 @@ img{
     opacity: 0px;
 
 }
+@media(max-width:375px){
+    img{
+        width: 250px;
+        height: 300px;
+        top: -151px;
+        left: -1671px;
+        gap: 0px;
+        opacity: 0px;
+    }
+    p{ 
+        font-family:"Inter",sans-serif;
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 20.0px;
+        text-align: left;
+        color: #000000;
+         
+    }
+    
+}
 p{ 
     font-family:"Inter",sans-serif;
     font-size: 19px;
