--- a/pages/content2-page/content2.css
+++ b/pages/content2-page/content2.css
@@ -1,5 +1,4 @@
 body{
-    min-width: 375px;
     max-width: 1920px;
     display:flex;
     flex-direction: column;
@@ -32,6 +31,24 @@ img #img1-content2{
     opacity: 0px;
 
 }
+@media(max-width=375px){
+    body{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+    }
+    img #img1-content2{
+        width: 300px;
+        height: 300px;
+        top: 1072px;
+        left: -1673px;
+        gap: 0px;
+        opacity: 0px;
+    
+    } 
+}
+   
 p{ 
     font-family:"Inter",sans-serif;
     font-size: 19px;
