--- a/pages/content2-page/content2.css
+++ b/pages/content2-page/content2.css
@@ -31,24 +31,7 @@ img #img1-content2{
     opacity: 0px;
 
 }
-@media(max-width=375px){
-    body{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 20px;
-    }
-    img #img1-content2{
-        width: 300px;
-        height: 300px;
-        top: 1072px;
-        left: -1673px;
-        gap: 0px;
-        opacity: 0px;
-    
-    } 
-}
-   
+
 p{ 
     font-family:"Inter",sans-serif;
     font-size: 19px;
@@ -111,4 +94,24 @@ p{
 #buttonMain-content2:hover{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
-    
+
+@media(max-width=375px){
+    body{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+
+        #seta-content2{
+            margin-right:0px;
+            width: 39px;
+            height: 31.42px;
+            top: 3466.42px;
+            left: -1521px;
+            gap: 0px;
+            opacity: 0px;
+            filter:invert(100%) saturate(0%);
+            transition: filter 0.3s ease;
+        }
+    }
+}
