--- a/pages/home-page/home.css
+++ b/pages/home-page/home.css
@@ -18,19 +18,6 @@ img{
     opacity: 0px;
     margin-right:20%;
 }
-@media(max-width:375px){
-    body{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        background-color:#FF6064 ;
-    } 
-    img{
-       display:none; 
-    } 
-  
-    
-}
 
 .home-content{
     background:linear-gradient(#FFFFFF,#FF6064);
@@ -50,8 +37,20 @@ h2{
     margin-left: 20px;
 }
 
-#dadosSucesso{
+*#dadosSucesso{
     display:flex;
     flex-direction: column;
     align-items: center;
+}
+@media(max-width:375px){
+    body{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        background-color:#FF6064 ;
+    } 
+    img{
+       display:none; 
+    } 
+  
 }
