--- a/pages/logIn-page/log.css
+++ b/pages/logIn-page/log.css
@@ -42,6 +42,7 @@ h1{
     left: -1521px;
     border-radius: 50px;
     border-color: #000000;
+    border-style:groove;
     background-color:#FFFFFF;
 }
 #button1-LogIn:active, #button2-LogIn:active, #button3-LogIn:active {
