--- a/pages/form-page/form.css
+++ b/pages/form-page/form.css
@@ -18,25 +18,6 @@ img{
     margin-right:20%;
 }
 
-@media(max-width:375px){
-    body{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        background-color:#FF6064 ;
-    }  
-    img{
-        max-width: 300px;
-         min-height: fit-content;
-         min-width: 200px;
-         max-height:fit-content;
-         top: 5009px;
-         left: -2050px;
-         gap: 0px;
-         opacity: 0px;
-         margin-right:20%;
-     }
-}
 
 .form-content{
     background-color:#FFFFFF ;
@@ -76,6 +57,7 @@ img{
     border-radius: 50px;
     border-width: 2px;
     border-color: #000000;
+    border-style:groove;
 }
 
 h1{
@@ -101,6 +83,7 @@ h1{
     border-radius: 50px;
     border-width: 2px;
     border-color: #000000;
+    border-style:groove;
     cursor: pointer;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); 
 }
@@ -124,5 +107,23 @@ h1{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-
+@media(max-width:375px){
+    body{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        background-color:#FF6064 ;
+    }  
+    img{
+        max-width: 300px;
+         min-height: fit-content;
+         min-width: 200px;
+         max-height:fit-content;
+         top: 5009px;
+         left: -2050px;
+         gap: 0px;
+         opacity: 0px;
+         margin-right:20%;
+     }
+}
 
